no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1087,7 +1087,7 @@ STR[NUM]                                        #Read-only. undefined if out of 
 STR.charAt(NUM)                                 #Same except "" if out of range
 STR.at(NUM)->'CHAR'                         *-|~#Like STR[NUM] except -NUM is from end, and is not writable
 
-STR.length                                      #
+STR.length                                      #Number of characters (not bytes)
 
 STR.match(REGEXP)                               #Like REGEXP.exec(STR), except that if g flag, returns all matches as ARR
                                                 #(or null)
@@ -1582,18 +1582,16 @@ ARR.entries()                                 -|#Returns all [INDEX, VAL] as ITE
 
 
 new ArrayBuffer(UINT[, OPTS])                   #Raw data chunk (initially filled with zeros). UINT is byteLength.
-                                                #Needs a DATAVIEW|TYPED_ARR to be manipulated, which gives:
+                                                #Needs a view to be manipulated, which gives:
+                                                #  - start|end indices
                                                 #  - a specific type to read it
-                                                #  - an offset from the beginning of it
                                                 #Available:
                                                 #  - DATAVIEW: can change type
                                                 #  - TYPED_ARR: more convenient because manipulated as an ARR
                                                 #Several DATAVIEW|TYPED_ARR can be applied to a single ARRBUFFER.
                                                 #OPTS:
                                             *-|~#  - maximumByteLength NUM (def: UINT)
-ArrayBuffer.isView(OBJ)                         #True if DATAVIEW|TYPED_ARR
 ARRBUFFER.byteLength                            #Readonly.
-                                                #This is different from STR.length which returns number of characters
 ARRBUFFER.maximumByteLength                 *-|~#Readonly. Set by OPTS.maximumByteLength
                                             *-|~#Maximum size to resize() to (def: UINT)
                                             *-|~#Allocates memory right away, i.e. more efficient
@@ -1605,7 +1603,7 @@ ARRBUFFER.transfer([UINT])->ARRBUFFER2      *-|~#Returns new ARRBUFFER2 with sam
                                             *-|~#ARRBUFFER is reset (byteLength|maximumByteLength 0)
 ARRBUFFER.slice(...)                            #Like ARR.slice(...)
 
-ARRAYBUFFERVIEW                                 #DATAVIEW|TYPED_ARR
+ArrayBuffer.isView(OBJ)                         #True if DATAVIEW|TYPED_ARR
 
 new DataView(ARRBUFFER[, UINT[, UINT2]])        #UINT is offset (def: 0), UINT2 length (def: ARRBUFFER.byteLength)
 DATAVIEW.buffer|byteLength|byteOffset           #Readonly
@@ -1627,8 +1625,9 @@ TypedArray                                      #Base prototype of [Ui|I]nt8|16|
                                               -|#  - UINT8_ARR[0] = 260 (4) vs UINT8_CLAMPED_ARR[0] = 260 (255)
 new TypedArray(ARRBUFFER[, UINT[, UINT2]])      #Same args as DataView
 new TypedArray(NUM)                             #Same as new TypedArray(new ArrayBuffer(NUM))
-new TypedArray(TYPED_ARR2)                      #Copy (no reference between each other)
+new TypedArray(TYPED_ARR2)                      #Copy
 new TypedArray(ARRAYLIKE|ITERABLE)              #Uses TYPED_ARR.from(...)
+                                                #Elements must be integers
 
 TypedArray|TYPED_ARR.BYTES_PER_ELEMENT          #
 TYPED_ARR.buffer|byteLength|byteOffset          #Readonly
@@ -1638,6 +1637,12 @@ TYPED_ARR.subarray(...)                         #Like slice(...) except it share
 TYPED_ARR.set(ARR|TYPED_ARR2[, UINT])           #Sets all ARR|TYPED_ARR2 values into TYPED_ARR, starting at index UINT (def: 0)
                                                 #If ARR|TYPED_ARR2 too big, RangeError thrown
 TYPED_ARR.toString()                            #Is like ARR, not OBJ
+
+REFERENCES ==>                                  #Different ARRBUFFERs always point to different data
+                                                #But 2 ARRAY
+2 ARRBUFFERs always different data, but 2 views might point to same ARRBUFFER
+Re-use same ARRBUFFER: new DataView|TypedArray(ARRBUFFER), subarray()
+Does not re-use same ARRBUFFER: new TypedArray(NUM|TYPED_ARR2|ARRAYLIKE|ITERABLE), TypedArray.from(), slice()
 
 
                                              /=+===============================+=\
