--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -809,8 +809,6 @@ kMaxLength                                      #Max BUFFER size (2 ** 32 on my 
 new TYPED_ARR(BUFFER)                           #Copy, not reference
                                                 #Each single BUFFER BVAL -> a single TYPED_ARR VAL
 Buffer.allocUnsafe[Slow](NUM)->BUFFER           #Similar to new TYPED_ARR(NUM)
-                                                #Unless "Slow", will reuse preallocated buffer from a pool (i.e. faster)
-                                                #if NUM <= Buffer.poolSize (def: 8192) / 2
 Buffer.alloc(NUM[, NUM2|SBUFFER[, 'ENCODING']]) #Like Buffer.allocUnsafeSlow(NUM).fill(NUM2|SBUFFER, 'ENCODING') (def: \0),
  ->BUFFER                                       #for security reasons
                                                 #If node --zero-fill-buffers, will fill with \0 even Buffer.allocUnsafe[Slow]()
@@ -820,7 +818,21 @@ Buffer.from(STR[, 'ENCODING'])->BUFFER          #
 Buffer.from(BUFFER)->BUFFER                     #Copies
 Buffer.concat(UBUFFER_ARR[, UINT])->BUFFER      #Similar to Array.prototype.concat.call(null, ...) but with UBUFFER_ARR
                                                 #Providing final length UINT can speed up performance.
+
 BUFFER.buffer                                   #Inherited from UINT8ARR. Reference to underlying ARRBUFFER
+ARRBUFFER RE-USE ==>                            #Two BUFFERs might re-use same underlying ARRBUFFER
+                                                #  - using preallocated ARRBUFFERs from a pool
+                                                #     - each ARRBUFFER size is Buffer.poolSize (def: 8192) / 2
+                                                #     - if BUFFER size is larger, does not re-use
+                                                #     - if BUFFER size is smaller but preallocated ARRBUFFER does not have
+                                                #       enough space left, create a new one
+                                                #  - use different indices of the underlying ARRBUFFER
+                                                #     - i.e. cannot change other BUFFERs data
+                                                #  - but can be a problem if ARRBUFFER.transfer()
+                                                #  - however, more performant since less memory allocation
+                                                #  - initialization methods ensuring different ARRBUFFERs:
+                                                #     - new TYPED_ARR(), Buffer.alloc[UnsafeSlow](): no re-use
+                                                #     - Buffer.allocUnsafe(), Buffer.from|concat(): might re-use
 
 Buffer.byteLength(STDABUFFER[, 'ENCODING'])->NUM#Similar to TYPED_ARR.byteLength
 
@@ -2306,8 +2318,8 @@ FUNC(ERROR, INT4, TDBUFFER))                    #INT4 is the number of bytes wri
                                                 #INT|INT2 are optional
 write(FD_INT, STR[, INT3,
 ['ENCODING', ]] FUNC(ERROR, INT4, STR))         #Same but with STR
-writev(FD_INT, ARRAYBUFFERVIEW_ARR[, INT3],
- FUNC(ERROR, INT4, ARRAYBUFFERVIEW_ARR))        #Same but with ARRAYBUFFERVIEW_ARR
+writev(FD_INT, TDBUFFER_ARR[, INT3],
+ FUNC(ERROR, INT4, TDBUFFER_ARR))               #Same but with TDBUFFER_ARR
 read(FD_INT, TDBUFFER, INT, INT2,
 INT3, FUNC(ERROR, INT4, BUFFER))                #
 read(FD_INT[, OPTS],FUNC(ERROR,INT2,BUFFER))    #Read INT2 bytes from file FD_INT and return as BUFFER
@@ -2317,8 +2329,8 @@ read(FD_INT[, OPTS],FUNC(ERROR,INT2,BUFFER))    #Read INT2 bytes from file FD_IN
                                                 #  - length INT2 (def: OPTS.buffer.length)
                                                 #  - position INT3 (def: null) (in file, to read)
                                          15.7.0*#    or BIGINT
-readv(FD_INT, ARRAYBUFFERVIEW[, INT3]
- FUNC(ERROR, INT4, ARRAYBUFFERVIEW_ARR))        #Same but with ARRAYBUFFERVIEW_ARR
+readv(FD_INT, TDBUFFER[, INT3]
+ FUNC(ERROR, INT4, TDBUFFER_ARR))               #Same but with TDBUFFER_ARR
 f[data]sync(FD_INT, FUNC(ERROR))                #Flushes to disk
                                                 #If 'data', like O_DSYNC instead of O_SYNC
 
