no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1618,7 +1618,9 @@ TypedArray                                      #Base prototype of [Ui|I]nt8|16|
                                               -|#and Big[Ui|i]nt64Array
                                                 #Each have a given associated type
                                                 #Not accessible globally but through prototype chain.
-                                              -|#Mixes in all ARR methods, including static ones.
+                                              -|#Mixes in all ARR methods:
+                                              -|#  - including TYPED_ARR[NUM], TypedArray.of|from()
+                                              -|#  - excluding concat(), splice(), push|pop|shift|unshift(), flat[Map]()
                                               -|#There is also a special Uint8ClampedArray, which do not 'roll' too low|high
                                               -|#values, e.g.:
                                               -|#  - UINT8_ARR[0] = -10 (246) vs UINT8_CLAMPED_ARR[0] = -1 (0)
@@ -1639,10 +1641,9 @@ TYPED_ARR.set(ARR|TYPED_ARR2[, UINT])           #Sets all ARR|TYPED_ARR2 values 
 TYPED_ARR.toString()                            #Is like ARR, not OBJ
 
 REFERENCES ==>                                  #Different ARRBUFFERs always point to different data
-                                                #But 2 ARRAY
-2 ARRBUFFERs always different data, but 2 views might point to same ARRBUFFER
-Re-use same ARRBUFFER: new DataView|TypedArray(ARRBUFFER), subarray()
-Does not re-use same ARRBUFFER: new TypedArray(NUM|TYPED_ARR2|ARRAYLIKE|ITERABLE), TypedArray.from(), slice()
+                                                #But 2 DATAVIEW|TYPED_ARR might point to same ARRBUFFER|data
+                                                #  - with: new DataView|TypedArray(ARRBUFFER), TYPED_ARR.subarray()
+                                                #  - but not with: new TypedArray(NUM|TYPED_ARR2|ARRAYLIKE|ITERABLE), TypedArray.from(), TYPED_ARR.slice()
 
 
                                              /=+===============================+=\
