--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -767,21 +767,6 @@ POLICY.onerror                                  #What do on integrity failures:
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:        STRING_DECODER         :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-new StringDecoder(['ENCODING'])                 #Returns DECODER. Def: "utf8"
-                                                #Does TDBUFFER -> STR translation
-DECODER.write|end(TDBUFFER)->STR                #Adds to current string. If:
-                                                #  - it still contains incomplete chars, returns ''
-                                                #  - otherwise, resets and returns current string
-DECODER.end()->STR                              #Returns current string, but does not reset.
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
                                             )==:            BUFFER             :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
@@ -795,10 +780,9 @@ Buffer                                          #Child of Uint8Array (including 
                                                 #  - some performance improvements, and some convenience functions
 
 [S][T][D][U][A]BUFFER                           #Means BUFFER|[STR]|[TYPED_ARR]|[DATAVIEW]|[UINT8ARR]|[ARRBUFFER]
-BVAL                                            #UINT (like Uint8Array), STR, BUFFER or UINT8ARR
 
-constants.MAX_LENGTH                            #Max BUFFER.length
-constants.MAX_STRING_LENGTH                     #Max STR.length
+constants.MAX_LENGTH                            #Max BUFFER.length (4GB on my machine)
+constants.MAX_STRING_LENGTH                     #Max STR.length (500MB on my machine)
 
 Buffer.isEncoding('ENCODING')->BOOL             #
 transcode(UBUFFER, "ENCODING", "ENCODING2")
@@ -806,8 +790,7 @@ transcode(UBUFFER, "ENCODING", "ENCODING2")
 
 kMaxLength                                      #Max BUFFER size (2 ** 32 on my machine)
 
-new TYPED_ARR(BUFFER)                           #Copy, not reference
-                                                #Each single BUFFER BVAL -> a single TYPED_ARR VAL
+new TYPED_ARR(BUFFER)                           #
 Buffer.allocUnsafe[Slow](NUM)->BUFFER           #Similar to new TYPED_ARR(NUM)
 Buffer.alloc(NUM[, NUM2|SBUFFER[, 'ENCODING']]) #Like Buffer.allocUnsafeSlow(NUM).fill(NUM2|SBUFFER, 'ENCODING') (def: \0),
  ->BUFFER                                       #for security reasons
@@ -832,7 +815,7 @@ ARRBUFFER RE-USE ==>                            #Two BUFFERs might re-use same u
                                                 #  - however, more performant since less memory allocation
                                                 #  - initialization methods ensuring different ARRBUFFERs:
                                                 #     - new TYPED_ARR(), Buffer.alloc[UnsafeSlow](): no re-use
-                                                #     - Buffer.allocUnsafe(), Buffer.from|concat(): might re-use
+                                                #     - Buffer.allocUnsafe(), Buffer.from|concat(), BUFFER.slice(): might re-use
 
 Buffer.byteLength(STDABUFFER[, 'ENCODING'])->NUM#Similar to TYPED_ARR.byteLength
 
@@ -847,6 +830,7 @@ BUFFER.toString(['ENCODING'[, ...])->STR        #Like:
                                                 #  return decoder.end()
 BUFFER.toJSON()                                 #Returns as '{"type": "Buffer", "data": [...]}'
 
+BVAL                                            #UINT (like Uint8Array), STR, BUFFER or UINT8ARR
 BUFFER.slice(...)->BUFFER                       #Like [TYPED_]ARR, but returns a reference
 BUFFER.[last]indexOf(..., 'ENCODING')->NUM      #Like [TYPED_]ARR but:
 BUFFER.includes(..., 'ENCODING')->BOOL          #  - VAL is BVAL
@@ -876,6 +860,21 @@ new Blob(...)                            15.7.0*#Like DOM except:
                                          15.7.0*#     - no OPTS.endings
                                          15.7.0*#     - OPTS.encoding 'ENCODING' (def: 'utf8')
                                          15.7.0*#  - no BLOB.stream()
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:        STRING_DECODER         :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+new StringDecoder(['ENCODING'])                 #Returns DECODER. Def: "utf8"
+                                                #Does TDBUFFER -> STR translation
+DECODER.write|end(TDBUFFER)->STR                #Adds to current string. If:
+                                                #  - it still contains incomplete chars, returns ''
+                                                #  - otherwise, resets and returns current string
+DECODER.end()->STR                              #Returns current string, but does not reset.
 
 
                                              /=+===============================+=\
@@ -3777,7 +3776,7 @@ types.isMap|SetIterator(VAL)->BOOL              #True if MAP|SET.keys|values|ent
 
 types.is[Shared|Any]ArrayBuffer[View]|DataView|
  TypedArray|[Big]Int|Uint|Float*Array(VAL)
- ->BOOL                                         #True if [SHARED]ARRAYBUFFER|DATAVIEW|TYPED_ARR|UINT|INT|FLOAT*ARRAY
+ ->BOOL                                         #True if [SHARED]ARRBUFFER|DATAVIEW|TYPED_ARR|UINT|INT|FLOAT*ARRAY
 
 types.isBoolean|Number|StringObject(VAL)
  ->BOOL                                         #True if new Boolean|Number|String(VAL) (not Boolean|Number|String(VAL))
