no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1581,7 +1581,10 @@ ARR.entries()                                 -|#Returns all [INDEX, VAL] as ITE
                                              \=+===============================+=/
 
 
-new ArrayBuffer(UINT[, OPTS])                   #Raw data chunk (initially filled with zeros). UINT is byteLength.
+new ArrayBuffer(UINT[, OPTS])                   #Raw data chunk. Useful for:
+                                                #  - binary data
+                                                #  - memory allocation performance optimization
+                                                #UINT is byteLength. Filled with \0
                                                 #Needs a view to be manipulated, which gives:
                                                 #  - start|end indices
                                                 #  - a specific type to read it
@@ -1625,8 +1628,8 @@ TypedArray                                      #Base prototype of [Ui|I]nt8|16|
                                               -|#values, e.g.:
                                               -|#  - UINT8_ARR[0] = -10 (246) vs UINT8_CLAMPED_ARR[0] = -1 (0)
                                               -|#  - UINT8_ARR[0] = 260 (4) vs UINT8_CLAMPED_ARR[0] = 260 (255)
-new TypedArray(ARRBUFFER[, UINT[, UINT2]])      #Same args as DataView
 new TypedArray(NUM)                             #Same as new TypedArray(new ArrayBuffer(NUM))
+new TypedArray(ARRBUFFER[, UINT[, UINT2]])      #Same args as DataView
 new TypedArray(TYPED_ARR2)                      #Copy
 new TypedArray(ARRAYLIKE|ITERABLE)              #Uses TYPED_ARR.from(...)
                                                 #Elements must be integers
