--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -772,94 +772,94 @@ POLICY.onerror                                  #What do on integrity failures:
                                              \=+===============================+=/
 
 
-Buffer                                          #Child of Uint8Array (including constructors), with extra methods:
-                                                #  - mixes in DATAVIEW flexibility (of changing current type)
-                                                #  - better serialization: toString(), toJSON()
-                                                #  - can decode STR according to different encodings
-                                                #  - can swap bytes, compare bytes
-                                                #  - some performance improvements, and some convenience functions
+new Blob(...)                            15.7.0*#Like DOM except:
+                                         15.7.0*#  - new Blob():
+                                         15.7.0*#     - no OPTS.endings
+                                         15.7.0*#     - OPTS.encoding 'ENCODING' (def: 'utf8')
+                                         15.7.0*#  - no BLOB.stream()
 
 [S][T][D][U][A]BUFFER                           #Means BUFFER|[STR]|[TYPED_ARR]|[DATAVIEW]|[UINT8ARR]|[ARRBUFFER]
 
-constants.MAX_LENGTH                            #Max BUFFER.length (4GB on my machine)
-constants.MAX_STRING_LENGTH                     #Max STR.length (500MB on my machine)
-
-Buffer.isEncoding('ENCODING')->BOOL             #
-transcode(UBUFFER, "ENCODING", "ENCODING2")
- ->BUFFER2                                      #Returns BUFFER2 with ENCODING2, based on UBUFFER with ENCODING
-
-kMaxLength                                      #Max BUFFER size (2 ** 32 on my machine)
+Buffer                                          #Child of Uint8Array, with extra methods:
+                                                #  - can change type, like DATAVIEW
+                                                #  - typecasting to STR|OBJ
+                                                #  - easier to concat, compare, swap
+                                                #  - can test|write SUBUFFERs (instead of only UINT)
+                                                #  - encode|decode with different ENCODINGs
 
 new TYPED_ARR(BUFFER)                           #
-Buffer.allocUnsafe[Slow](NUM)->BUFFER           #Similar to new TYPED_ARR(NUM)
-Buffer.alloc(NUM[, NUM2|SBUFFER[, 'ENCODING']]) #Like Buffer.allocUnsafeSlow(NUM).fill(NUM2|SBUFFER, 'ENCODING') (def: \0),
- ->BUFFER                                       #for security reasons
-                                                #If node --zero-fill-buffers, will fill with \0 even Buffer.allocUnsafe[Slow]()
-Buffer.from(NUM_ARR)->BUFFER                    #Similar to new TYPED_ARR(NUM_ARR)
-Buffer.from(ARRBUFFER, ...)->BUFFER             #Similar to new TYPED_ARR(ARRBUFFER, ...)
-Buffer.from(STR[, 'ENCODING'])->BUFFER          #
-Buffer.from(BUFFER)->BUFFER                     #Copies
-Buffer.concat(UBUFFER_ARR[, UINT])->BUFFER      #Similar to Array.prototype.concat.call(null, ...) but with UBUFFER_ARR
-                                                #Providing final length UINT can speed up performance.
+new Buffer(...)                                 #Like new TYPED_ARR(...), but deprecated
+Buffer.allocUnsafe[Slow](NUM)->BUFFER           #Like new TYPED_ARR(NUM), but does not fill with \0 unless --zero-fill-buffers
+Buffer.alloc(NUM[, ...])->BUFFER                #Like Buffer.allocUnsafeSlow(NUM).fill(...) (def: \0)
+Buffer.from(ARRBUFFER[, UINT[, UINT2]])->BUFFER
+Buffer.from(TDBUFFER)->BUFFER
+Buffer.from(ARRAYLIKE)->BUFFER                  #Like new TYPED_ARR(...)
 
-BUFFER.buffer                                   #Inherited from UINT8ARR. Reference to underlying ARRBUFFER
-ARRBUFFER RE-USE ==>                            #Two BUFFERs might re-use same underlying ARRBUFFER
-                                                #  - using preallocated ARRBUFFERs from a pool
-                                                #     - each ARRBUFFER size is Buffer.poolSize (def: 8192) / 2
-                                                #     - if BUFFER size is larger, does not re-use
-                                                #     - if BUFFER size is smaller but preallocated ARRBUFFER does not have
-                                                #       enough space left, create a new one
-                                                #  - use different indices of the underlying ARRBUFFER
+Buffer.concat(UBUFFER_ARR[, UINT])->BUFFER      #Concatenates elements to single BUFFER
+                                                #Stops at UINT bytes (if provided).
+BUFFER.slice(...)->BUFFER2                      #
+
+BUFFER.toString([...])->STR                     #If argument, does BUFFER.slice(...)
+Buffer.from(STR)->BUFFER                        #
+BUFFER.toJSON()->OBJ                            #OBJ: type 'Buffer', data NUM_ARR
+Buffer.from(OBJ)->BUFFER                        #
+
+BUFFER.buffer                                   #Like TYPED_ARR.buffer
+REFERENCES ==>                                  #Two BUFFERs might re-use same underlying ARRBUFFER:
+                                                #  - new TYPED_ARR(BUFFER), Buffer.alloc[UnsafeSlow](): no re-use
+                                                #  - Buffer.from(ARRBUFFER), BUFFER.subarray|slice(): re-use
+                                                #  - Buffer.allocUnsafe(), Buffer.from(TDBUFFER|ARRAYLIKE|STR|OBJ), Buffer.concat(): use pool
+POOL ==>                                        #A pool of ARRBUFFERs is automatically maintained, for memory allocation performance.
+                                                #Each ARRBUFFER size is Buffer.poolSize (def: 8192)
+                                                #  - should be power of 2, for performance
+                                                #Buffer.allocUnsafe|from|concat() use them:
+                                                #  - only a subrange of the ARRBUFFER
+                                                #     - subrange size is according to BUFFER size
+                                                #        - but might be a little bigger
+                                                #        - e.g. force a power of 8 on my machine
                                                 #     - i.e. cannot change other BUFFERs data
-                                                #  - but can be a problem if ARRBUFFER.transfer()
-                                                #  - however, more performant since less memory allocation
-                                                #  - initialization methods ensuring different ARRBUFFERs:
-                                                #     - new TYPED_ARR(), Buffer.alloc[UnsafeSlow](): no re-use
-                                                #     - Buffer.allocUnsafe(), Buffer.from|concat(), BUFFER.slice(): might re-use
+                                                #        - except with ARRBUFFER.resize|transfer()
+                                                #  - only if BUFFER size <= ARRBUFFER total size
+                                                #  - the same ARRBUFFER is used until no more available size, in which case a new one is created|used
 
-Buffer.byteLength(STDABUFFER[, 'ENCODING'])->NUM#Similar to TYPED_ARR.byteLength
+Buffer.byteLength(STDABUFFER)->NUM              #Like TYPED_ARR.byteLength
 
 Buffer.isBuffer(VAL)->BOOL                      #
 BUFFER.equals(UBUFFER2)->BOOL                   #
 BUFFER.compare(UBUFFER2[, 4 NUM])->-1|0|1       #Sort comparison. NUMs are UBUFFER2 start|end and UBUFFER start|end
 Buffer.compare(UBUFFER, UBUFFER2)->-1|0|1       #Same as BUFFER.compare(UBUFFER2)
 
-BUFFER.toString(['ENCODING'[, ...])->STR        #Like:
-                                                #  let decoder = new StringDecoder('ENCODING');
-                                                #  decoder.write(BUFFER.slice(...));
-                                                #  return decoder.end()
-BUFFER.toJSON()                                 #Returns as '{"type": "Buffer", "data": [...]}'
-
-BVAL                                            #UINT (like Uint8Array), STR, BUFFER or UINT8ARR
-BUFFER.slice(...)->BUFFER                       #Like [TYPED_]ARR, but returns a reference
-BUFFER.[last]indexOf(..., 'ENCODING')->NUM      #Like [TYPED_]ARR but:
-BUFFER.includes(..., 'ENCODING')->BOOL          #  - VAL is BVAL
-BUFFER.fill(...[, 'ENCODING'])                  #  - can use 'ENCODING'
-
-BUFFER.write(STR[, UINT[, UINT2[, 'ENCODING']]])#Writes STR on BUFFER
- ->NUM                                          #UINT is offset (def: 0) and UINT2 is length (def: all)
+BVAL                                            #Element values can be not only UINT but also 'CHAR'|SUBUFFER in:
+                                                #  - [last]indexOf|includes()
+                                                #  - fill() (repeat elements)
+BUFFER.write(STR[, UINT[, UINT2]])->NUM         #Writes STR on BUFFER
+                                                #UINT is offset (def: 0) and UINT2 is length (def: all)
 BUFFER.copy(UBUFFER2[, 3 UINT])->UINT4          #Copies bytes from BUFFER at position UINT to UBUFFER2 from position UINT2 to
                                                 #UINT3 (def: UBUFFER2.length)
 
-BUFFER.readFloat|Double|[U]Int8|16|32]LE|BE
-(UINT[, BOOL])->VAL                             #Similar to DATAVIEW.get|set* but:
-BUFFER.writeFloat|Double|[U]Int8|16|32LE|BE     #  - use LE|BE instead of BOOL argument
-(VAL, UINT[, BOOL])                             #  - if BOOL true, faster but no validation of UINT buffer overflow
-BUFFER.read[U]Int[LE|BE](UINT, UINT2[, BOOL])
-BUFFER.write[U]Int[LE|BE](VAL,UINT,UINT2[,BOOL])#Same but specifies [U]Int size UINT2 (up to 48)
-BUFFER.readBig[U]Int64LE|BE
- (UINT)->BIGINT                                 #
-BUFFER.readBig[U]Int64LE|BE
- (BIGINT, UINT)                                 #
-BUFFER.*int*(...)                               #Like BUFFER.*Int*(...)
+BUFFER.read*LE|BE(UINT)->VAL                    #Like DATAVIEW.get*(UINT) but:
+                                                #  - BOOL argument -> LE|BE
+                                                #  - can spell Uint -> UInt
+BUFFER.read[Ui|I]nt[LE|BE](UINT, UINT2)->VAL    #Same but specifies integer size UINT2 (up to 48)
+BUFFER.write*(VAL, ...)                         #
 
 BUFFER.swap16|32|64()->BUFFER                   #Swaps every couple of 1|2|4 bytes. Return value is reference
 
-new Blob(...)                            15.7.0*#Like DOM except:
-                                         15.7.0*#  - new Blob():
-                                         15.7.0*#     - no OPTS.endings
-                                         15.7.0*#     - OPTS.encoding 'ENCODING' (def: 'utf8')
-                                         15.7.0*#  - no BLOB.stream()
+kMaxLength
+constants.MAX_LENGTH                            #Max BUFFER.length (4GB on my machine)
+kStringMaxLength
+constants.MAX_STRING_LENGTH                     #Max STR.length (500MB on my machine)
+
+'ENCODING'                                      #Can be optional last argument to:
+                                                #  - Buffer.alloc|from(STR)
+                                                #  - Buffer.byteLength(...)
+                                                #  - BUFFER.write()
+                                                #  - BUFFER.[last]indexOf|includes|fill()
+                                                #And optional first argument to:
+                                                #  - BUFFER.toString()
+Buffer.isEncoding('ENCODING')->BOOL             #
+transcode(UBUFFER, "ENCODING", "ENCODING2")
+ ->BUFFER2                                      #Returns BUFFER2 with ENCODING2, based on UBUFFER with ENCODING
 
 
                                              /=+===============================+=\
