no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -819,9 +819,10 @@ POOL ==>                                        #A pool of ARRBUFFERs is automat
                                                 #        - e.g. force a power of 8 on my machine
                                                 #     - i.e. cannot change other BUFFERs data
                                                 #        - except with ARRBUFFER.resize|transfer()
-                                                #  - only if BUFFER size <= ARRBUFFER total size
+                                                #  - only if BUFFER size < Buffer.poolSize / 2
                                                 #  - the same ARRBUFFER is used until no more available size, in which case a new one is created|used
 
+BUFFER.length
 Buffer.byteLength(STDABUFFER)->NUM              #Like TYPED_ARR.byteLength
 
 Buffer.isBuffer(VAL)->BOOL                      #
@@ -857,6 +858,7 @@ constants.MAX_STRING_LENGTH                     #Max STR.length (500MB on my mac
                                                 #  - BUFFER.[last]indexOf|includes|fill()
                                                 #And optional first argument to:
                                                 #  - BUFFER.toString()
+                                                #Def: 'utf8'
 Buffer.isEncoding('ENCODING')->BOOL             #
 transcode(UBUFFER, "ENCODING", "ENCODING2")
  ->BUFFER2                                      #Returns BUFFER2 with ENCODING2, based on UBUFFER with ENCODING
