no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1724,7 +1724,7 @@ function* [FUNC](){...}                       -|#Generator.
                                               -|#        - note: for (... of ...) only calls next(), so yield returns undefined
                                               -|#     - stops at next "yield NEXT" or "return FINAL_NEXT"
                                               -|#  - return(FINAL_NEXT)->{ done true, value FINAL_NEXT }
-                                              -|#     - meant for cleanup codde
+                                              -|#     - meant for cleanup code
                                               -|#  - throw(ERROR): throw ERROR from context of last yield
                                               -|#Can also use yield* ITERABLE:
                                               -|#  - yield NEXT several times
