no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.30.0
+VERSION ==>                       #7.32.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -186,6 +186,7 @@ eslint --color|--no-color         #
 
 eslint --quiet                    #Only report errors
 eslint --max-warnings NUM         #Error if more than NUM warnings (def: -1)
+eslint --exit-on-fatal-error      #Exit code 2 instead of 1 on parsing error
 
 
                                              /=+===============================+=\
